header + footer styles, site logo, fonts, and various other static assets that will be needed for rest of site

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,17 @@
 ---
-const today = new Date();
+import { SITE_TITLE } from "../consts";
 ---
 
-<footer>
+<footer class="Footer">
+    <a href="/" class="Home:Link">
+      <img
+        class="SiteLogo"
+        src="/site-logo.png"
+        alt="Cartoon Beats Reality logo"
+      />
+		</a>
+		<div class="Menu">
+			<a href="/blog">Blog</a>
+			<a href="/">Music</a>
+		</div>
 </footer>
