--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -19,25 +19,20 @@ const posts = (await getCollection('blog')).sort(
 	</head>
 	<body>
 		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.id}/`}>
-									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
-									)}
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
+		<main class="PageContent">
+			<section class="BlogGrid">
+				{
+					posts.map((post) => (
+						<div class="BlogGrid-postCard">
+							<a href={`/blog/${post.id}/`}>
+								{post.data.heroImage && (
+									<Image src={post.data.heroImage} alt="" />
+								)}
+								<h4 class="title">{post.data.title}</h4>
+							</a>
+						</div>
+					))
+				}
 			</section>
 		</main>
 		<Footer />
