--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Hedvig Letters Serif";
   src: local("Hedvig Letters Serif"),
-    url(../fonts/HedvigLettersSerif-Regular-VariableFont_opsz.ttf)
+    url(/fonts/HedvigLettersSerif-Regular-VariableFont_opsz.ttf)
       format("truetype");
 }
 
 @font-face {
   font-family: "Hedvig Letters Sans";
   src: local("Hedvig Letters Sans"),
-    url(../fonts/HedvigLettersSans-Regular.ttf) format("truetype");
+    url(/fonts/HedvigLettersSans-Regular.ttf) format("truetype");
 }
