--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,9 +29,8 @@ const { title, description, image = FallbackImage } = Astro.props;
 />
 <meta name="generator" content={Astro.generator} />
 
-<!-- Font preloads -->
-<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
+<!-- Fontawesome custom icon font -->
+<link rel="stylesheet" href="/fontello/css/fontawesome-musicstores.css">
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
