--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@ import '../styles/fonts.scss';
 import '../styles/index.scss';
 import type { ImageMetadata } from 'astro';
 import FallbackImage from '../assets/cartoonbeats-mixer-opengraph-cover.jpg';
-import { SITE_TITLE } from '../consts';
+import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 
 interface Props {
 	title: string;
@@ -13,7 +13,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = FallbackImage } = Astro.props;
+const { title, description = SITE_DESCRIPTION, image = FallbackImage } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -36,7 +36,7 @@ const { title, description, image = FallbackImage } = Astro.props;
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{title}</title>
+<title>{title} | {SITE_TITLE}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
