--- a/src/layouts/ReleasePage.astro
+++ b/src/layouts/ReleasePage.astro
@@ -27,7 +27,7 @@ const { slug, artist, title, releaseDate, cover, listenLinks, description, blurb
 	</head>
 
 	<body>
-		<Header />
+		<Header short />
 		<VerticalStackRelease
 			coverImage={cover} 
 			title={title}
