--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -42,7 +42,7 @@ img {
 
 .Header-menuBar {  
   padding: 1em 1em 0.5em;
-  .SiteTitle {
+  .Title {
     font-size: 1.4em;
     font-weight: bold;
   }
@@ -52,7 +52,7 @@ img {
   .SiteLogo {
     width: 2em;
   };
-  .SiteTitle {
+  .Title {
     font-size: 1em;
   }
 
@@ -60,7 +60,7 @@ img {
     .SiteLogo {
       width: 3em;
     };
-    .SiteTitle {
+    .Title {
       font-size: 1.4em;
     }
   }
@@ -117,7 +117,7 @@ img {
     .SiteLogo {
       width: 7em;
     };
-    .SiteTitle {
+    .Title {
       font-size: 2em;
     }
   }
@@ -130,7 +130,7 @@ img {
   .SiteLogo {
     width: 4em;
   };
-  .SiteTitle {
+  .Title {
     font-size: 80%;
   }
   .HomeLink {
