--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,14 @@ img {
   object-fit: cover;
 }
 
+img, video {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+}
+
+
 .PageContent, .Header, .Footer {
   max-width: 400px;
   margin: auto;
