ensure release page content and image is not overly large

--- a/src/components/VerticalStackRelease.scss
+++ b/src/components/VerticalStackRelease.scss
@@ -18,8 +18,8 @@
     }
 
     .Release-cover {
-      .gatsby-image-wrapper, img {
-        max-width: 70vw;
+      img {
+        max-width: min(600px, 70vw);
       }
 
     }
