--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-
 @use './_globals.scss';
 
 body {
@@ -31,6 +30,23 @@ img, video {
   margin: auto;
 }
 
+.small {
+  font-size: 70%;
+}
+
+/* Blockquote styling */
+blockquote {
+  position: relative;
+  margin: 1.5em 0;
+  padding: 1em 1.5em;
+  background: rgba(255,255,255,0.05);
+  border-left: 5px solid #ccc;
+  color: inherit;
+}
+
+blockquote p {
+  margin: 0;
+}
 
 .PageContent, .Header, .Footer {
   max-width: 400px;
