add profile aka about to footer menu

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,8 @@ import { SITE_TITLE } from "../consts";
       />
 		</a>
 		<div class="Menu">
-			<a href="/blog">Blog</a>
 			<a href="/">Music</a>
+			<a href="/blog">Blog</a>
+			<a href="/haszari">About</a>
 		</div>
 </footer>
